--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 body {
+  background: url("https://thirdspacebrewing.com/wp-content/uploads/2016/04/Two-Beers-pic.jpg");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
